--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "node Dependency Injection Example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "khurram",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.12.0",
     "node-dependency-injection-express-middleware": "^1.2.2",
     "nodemon": "^2.0.7"
   }
