--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URI = 'mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false'
+DATABASE_URI = 'mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass%20Community&ssl=false'
 PORT = 9001
 URL = 'http://localhost'
