--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "author": "khurram",
   "license": "ISC",
   "dependencies": {
+    "awilix": "^4.3.3",
+    "awilix-express": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.0",
-    "node-dependency-injection-express-middleware": "^1.2.2",
     "nodemon": "^2.0.7"
   }
 }
