--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "khurram",
   "license": "ISC",
   "dependencies": {
-    "awilix": "^4.3.3",
+    "awilix-express": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.0",
